// Vitest Snapshot v1

exports[`AlternatePageFramework > rendrer slik den skal i full width 1`] = `
<DocumentFragment>
  <main
    class="_main_09045e"
  >
    <style>
      
      #root {
        background: var(--a-bg-default);
        }
      
    </style>
    <div
      class="_headerGroup_09045e"
    >
      <h1
        class="_headerGroupTitle_09045e navds-heading navds-heading--large"
      >
        application.title
      </h1>
    </div>
  </main>
</DocumentFragment>
`;

exports[`AlternatePageFramework > rendrer slik den skal, med main tag og Heading på riktig nivå 1`] = `
<DocumentFragment>
  <main
    class="_main_09045e _main__isFramed_09045e"
  >
    <style>
      
      #root {
        background: var(--a-bg-default);
        }
      
    </style>
    <div
      class="_headerGroup_09045e"
    >
      <h1
        class="_headerGroupTitle_09045e _headerGroupTitle__isFramed_09045e navds-heading navds-heading--large"
      >
        application.title
      </h1>
    </div>
  </main>
</DocumentFragment>
`;
